backend can now access & return admin table from db.  cleaned up a bit. deploy

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <h1>SCHEDULE++</h1>
-GET/POST .admin/employees
-GET/PUT/DELETE .admin/employees/:id
+
+<h3>GET/POST        /admin/employees</h3>
+<h3>GET/PUT/DELETE  /admin/employees/:id</h3>
+<h3>GET             /admin/admins</h3>
 </body>
 </html>
