--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,14 @@
 <body>
 <h1>SCHEDULE++</h1>
 
-<h3>GET/POST        /admin/employees</h3>
-<h3>GET/PUT/DELETE  /admin/employees/:id</h3>
-<h3>GET             /admin/admins</h3>
+<h4>API cap'd = working on localhost</h4>
+<h4>API lowercase = todo</h4>
+<h4>API !!! = works on deployed</h4>
+
+<h3>get/post        /admin/employees</h3>
+<h3>get/put/delete  /admin/employees/:id</h3>
+<hr/>
+<h3>GET/POST        /admin/admins</h3>
+<h3>GET/put/delete  /admin/employees/:id</h3>
 </body>
 </html>
