localhost admin can CRUD clients

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,5 +16,8 @@
 <hr/>
 <h3>GET/POST        /admin/admins</h3>
 <h3>GET/PUT/DELETE  /admin/employees/:id</h3>
+<hr/>
+<h3>GET/POST        /admin/clients</h3>
+<h3>GET/PUT/DELETE  /admin/clients/:id</h3>
 </body>
 </html>
