localhost admin can CRUD shifts.  will need DRYING later

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,5 +19,8 @@
 <hr/>
 <h3>GET/POST        /admin/clients</h3>
 <h3>GET/PUT/DELETE  /admin/clients/:id</h3>
+<hr/>
+<h3>g/p       /admin/shifts</h3>
+<h3>g/p/d  /admin/shifts/:id</h3>
 </body>
 </html>
