--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,10 @@
 <h3>GET/POST        /admin/clients</h3>
 <h3>GET/PUT/DELETE  /admin/clients/:id</h3>
 <hr/>
-<h3>g/p       /admin/shifts</h3>
-<h3>g/p/d  /admin/shifts/:id</h3>
+<h3>GET/POST       /admin/shifts</h3>
+<h3>GET/PUT/DELETE  /admin/shifts/:id</h3>
+<hr/>
+<h3>G/P       /admin/shifts</h3>
+<h3>G/p/d  /admin/shifts/:id</h3>
 </body>
 </html>
