localhost admin can CRD unavails, Update/put specifically omitted bc u either can work or u can't

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 <h3>GET/POST       /admin/shifts</h3>
 <h3>GET/PUT/DELETE  /admin/shifts/:id</h3>
 <hr/>
-<h3>G/P       /admin/shifts</h3>
-<h3>G/p/d  /admin/shifts/:id</h3>
+<h3>GET/POST       /admin/unavails</h3>
+<h3>GET/DELETE  /admin/unavails/:id <- no Put planned b/c u either available(post) or not(delete)</h3>
 </body>
 </html>
