added employees/{id}/unstaffedShifts/{shiftId} which the texts to employees will refer to

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,9 @@
 <h3>GET             /employees/:id/shifts</h3>
 <h3>PUT             /employees/:id/shifts/:shiftId</h3>
 <h3>GET             /employees/:id/unstaffedShifts</h3>
+
+
+<h3>get&post?       /employees/:id/unstaffedShifts/:shiftId</h3>
 <hr/>
 
 <h1>===== LOGIN routes =====</h1>
