experimenting with texts db and associated model/dao/svc

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,7 +42,7 @@
 
 <h1>===== TWILIO routes =====</h1>
 <h3>POST        /sendText</h3>
-<h3>POST        /sendText/getReply</h3>
+<h3>post?       /sendText/getReply</h3>
 
 </body>
 </html>
