fixed pom.xml so java version is 8 instead of 11.  config linking up to new database.  attempting redeployment...

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,9 +40,9 @@
 <h3>GET        /login/:googldId</h3>
 <hr/>
 
-<h1>===== TWILIO routes =====</h1>
+<h1>===== TEXT routes =====</h1>
 <h3>POST        /sendText</h3>
-<h3>post?       /sendText/getReply</h3>
+<h3>GET/POST    /sendText/:uuid</h3>
 
 </body>
 </html>
