will disallow adding an employee to a shift if... 1. they're off/unavail that day, or 2. they have a clashing shift that day

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,7 +37,7 @@
 <hr/>
 
 <h1>===== LOGIN routes =====</h1>
-<h3>GET        /login/:googldId</h3>
+<h3>GET/POST        /login/:googleId</h3>
 <hr/>
 
 <h1>===== TEXT routes =====</h1>
